<resources>
    <string name="app_name">Pune Driver</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_hint">Driver Id </string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password</string>
<!--    <string name="login_user">Login</string>-->
    <string name="login">Login</string>
    <string name="your_are_at_durocrete">You are at Durocrete.</string>
    <string name="start_pick_up_points">Start your Pick up Point</string>
    <string name="drive_now">Drive Now</string>
    <string name="side_name">Site Name </string>
    <string name="client_name">Client Name </string>
    <string name="site_address">Site Address</string>
    <string name="contact_person_name">Contact Person \n Name : </string>
    <string name="site_person_name">Site Person For Collection \n Name: </string>
    <string name="check_in">CHECK IN</string>
    <string name="check_out">Check Out</string>
    <string name="select_material">Select Material</string>
    <string name="add_material">Add Material</string>
    <string name="collected_material">Collected Material</string>
    <string name="material_status">Material Status : </string>
    <string name="collected">Collected</string>
    <string name="not_collected">Not Collected</string>
    <string name="customer_signature">Customer Signature</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="thank_uou">Thank You</string>
    <string name="enter_driver_id">Enter Driver ID</string>
    <string name="enter_driver_password">Enter Driver password</string>
    <string name="info">Info</string>
    <string name="are_you_sure_want_to_save_image">Are you sure you want to save the image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="imageDescription">imageDescription</string>


</resources>
