<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/white"
        android:visibility="gone"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="vertical">

        <TextView
            android:id="@+id/txtHeaderPickUpPointName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/your_are_at_durocrete"/>

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/start_pick_up_points"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnDriveNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/drive_now"
            android:layout_weight="0.7"/>

    </LinearLayout>



    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <!--<FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_below="@+id/llHeaderLayout"
        android:layout_height="match_parent"/>-->

</RelativeLayout>

