<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:text="@string/material_status" />

                <RadioGroup
                    android:id="@+id/radioGroupWorkingStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9">

                    <RadioButton
                        android:id="@+id/radioCompleted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/collected" />

                    <RadioButton
                        android:id="@+id/radioInCompleted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_collected" />

                </RadioGroup>

            </TableRow>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <EditText
                    android:id="@+id/reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:maxLength="80"
                    android:singleLine="true"
                    android:maxEms="10"
                    android:hint="Reason"
                    android:visibility="gone"
                    android:paddingLeft="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:paddingLeft="20dp"
                        android:paddingTop="30dp"
                        android:text="@string/customer_signature" />


                    <Button
                        android:id="@+id/btnclear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal|center_vertical"
                        android:maxWidth="200dp"
                        android:text="@string/clear"
                        android:visibility="visible" />

                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:layout_weight="0.9"
                    app:cardElevation="8dp">

                    <com.kyanogen.signatureview.SignatureView xmlns:sign="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/signatureView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        sign:backgroundColor="#ffffff"
                        sign:enableSignature="true"
                        sign:penColor="#000000"
                        sign:penSize="5dp" />

                </androidx.cardview.widget.CardView>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:maxWidth="200dp"
            android:text="@string/submit"
            android:visibility="visible" />


    </LinearLayout>


</ScrollView>