<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_margin="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/Black"
                    android:text="@string/side_name" />

                <TextView
                    android:id="@+id/txtSideName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:lines="2"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:paddingLeft="4dp"
                    android:text="parangpe" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:text="@string/client_name" />

            <TextView
                android:id="@+id/txtClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lines="2"
                android:paddingLeft="4dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="parangpe" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/site_address" />

            <TextView
                android:id="@+id/txtSiteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lines="2"
                android:paddingLeft="4dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="parangpe" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:lines="2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:text="@string/contact_person_name" />

            <TextView
                android:id="@+id/txtContactPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lines="4"
                android:paddingLeft="4dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="parangpe" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:lines="2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:text="Contact Number" />

            <TextView
                android:id="@+id/txtcontactnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lines="4"
                android:paddingLeft="4dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:text="parangpe" />

        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/btnSignIN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal|center_vertical"
        android:maxWidth="200dp"
        android:text="@string/check_in"
        android:visibility="visible" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</androidx.cardview.widget.CardView>
