<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlParentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnNext">

        <TextView
            android:id="@+id/txtSelectMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/ColorPrimary"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:text="@string/select_material"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/llSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSelectMaterial"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal"
                android:weightSum="1">

                <Spinner
                    android:id="@+id/spinnerMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5" />

                <!--<Spinner-->
                    <!--android:id="@+id/spinnerQuantity"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="0.5" />-->
                <EditText
                    android:id="@+id/et_quantity"
                    android:hint="Enter Quantity"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_border"
                    android:maxLength="2"
                    android:digits="0123456789"
                    android:layout_weight="0.5"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">


                <Button
                    android:id="@+id/btnAddMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@color/ColorPrimary"
                    android:gravity="center"
                    android:text="@string/add_material"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnCheckOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@color/ColorPrimary"
                    android:gravity="center"
                    android:text="@string/check_out"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llSpinner"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:cardElevation="8dp">

                <ListView
                    android:id="@+id/lvCollectedMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@android:id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FF0000"
                    android:visibility="gone" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:maxWidth="200dp"
        android:text="@string/next"
        android:background="@color/ColorPrimary"
        android:visibility="visible" />


</RelativeLayout>