<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.1"
                        android:text="Client Name- " />

                    <TextView
                        android:id="@+id/clientname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="0.9"
                        android:textColor="@color/Black" />

                </TableRow>



                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.1"
                        android:text="Enquiry Id :- " />

                    <TextView
                        android:id="@+id/enquiry_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="0.9"
                        android:textColor="@color/Black" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.1"
                        android:text="@string/material_status" />

                    <RadioGroup
                        android:id="@+id/radioGroupWorkingStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9">

                        <RadioButton
                            android:id="@+id/radioCompleted"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/collected" />

                        <RadioButton
                            android:id="@+id/radioInCompleted"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_collected" />

                    </RadioGroup>

                </TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9">

                    <EditText
                        android:id="@+id/reason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:hint="Reason"
                        android:maxEms="10"
                        android:maxLength="150"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:visibility="gone" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.6"
                        android:paddingLeft="20dp"
                        android:text="@string/customer_signature"
                        android:textColor="@color/black" />


                    <Button
                        android:id="@+id/btnclear"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.4"
                        android:background="@color/ColorPrimary"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="Click Here"
                        android:visibility="visible" />

                </LinearLayout>



            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnreport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@color/ColorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:maxWidth="200dp"
            android:text="Report"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnbill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:background="@color/ColorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:maxWidth="200dp"
            android:text="Bill"
            android:visibility="visible" />

    </LinearLayout>


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/ColorPrimary"
                android:gravity="center_horizontal|center_vertical"
                android:maxWidth="200dp"
                android:text="@string/submit"
                android:visibility="visible" />


    </LinearLayout>



</LinearLayout>